@@ -32,9 +32,13 @@
 						</label>
 						<SELECT size="1" name="a[]" OnChange="document.filter.submit();" class="lms-ui-multiselect lms-ui-multiselect-filter" multiple data-default-value="{trans("- all -")}">
 							<OPTION value="-1" {if is_array($filter.userid) && in_array('-1', $filter.userid)} selected{/if} data-exclusive>- {trans("unassigned")} -</OPTION>
-							{foreach $userlist as $user}
-								<OPTION value="{$user.id}"{if is_array($filter.userid) && in_array($user.id, $filter.userid)} SELECTED{/if}{if !$user.access} disabled{/if}>{$user.rname|truncate:40:"...":true} ({$user.login})</OPTION>
-							{/foreach}
+						{foreach $userlist as $user}
+						{if !ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users')
+							|| (ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users')
+							&& $user.access) || in_array($user.id, $filter.owner)}
+						<OPTION{if !$user.access} disabled{/if} value="{$user.id}"{if is_array($filter.userid) && in_array($user.id, $filter.userid)}} selected{/if}>{$user.rname|truncate:40:"...":true} ({$user.login})</OPTION>
+						{/if}
+						{/foreach}
 						</SELECT>
 						{trans("Privacy:")}
 						<SELECT name="privacy" onchange="document.filter.submit();">
