@@ -115,8 +115,11 @@
 					{box_row icon="img/users.gif" label="Users:" field_class="multiselect"}
 						<SELECT name="event[userlist][]" class="lms-ui-multiselect" multiple data-default-value="{trans("- select user -")}" data-shorten-to-default-value="false">
 							{foreach $userlist as $user}
-								{if $user.access}
-								<OPTION value="{$user.id}"{if !empty($event.userlist) && in_array($user.id, $event.userlist)} selected{/if}>{$user.rname} ({$user.login})</OPTION>
+								{if !ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users') || (ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users')
+                                                                    && $user.access) || in_array($user.id, $filter.owner)}
+								<OPTION {if !$user.access} disabled{/if} value="{$user.id}" {if is_array($event.userlist) && in_array($user.id, $event.userlist)}}selected{/if}>
+									{$user.rname|truncate:40:"...":true}({$user.login})
+								</OPTION>
 								{/if}
 							{/foreach}
 						</SELECT>
