@@ -36,6 +36,9 @@ version 26-git (????-??-??):
     input fields [chilan]
   - improvement: lms-cashimport.php script generates import report on output [chilan]
   - enhancement: userpanel startup module can be defined from user interface [interduo]
+  - improvement: added phpui.timetable_hide_disabled_users setting
+    in eventmodify/eventlistfilter [interduo]
+
 
 version 25.0 (2020-05-15):
 
